# nexus-cli

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  firebase.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.yml
.github/workflows/: ci.yml  firebase-hosting-pull-request.yml  firebase-hosting-release.yml  release.yml
;devcontainer/: devcontainer.json
clients/cli/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml
clients/cli/.cargo/: config.toml
clients/cli/assets/: fib_input  fib_input_initial
clients/cli/examples/: Cargo.toml
clients/cli/examples/src/: main.rs
clients/cli/programs/fib_input_initial/: Cargo.toml  README.md
clients/cli/programs/fib_input_initial/src/: main.rs
clients/cli/programs/fib_input_initial/src/guest/: Cargo.toml
clients/cli/programs/fib_input_initial/src/guest/src/: main.rs
clients/cli/scripts/: README.md  build_guest.sh  peak_memory.sh
clients/cli/src/: analytics.rs  cli_messages.rs  config.rs  consts.rs  environment.rs  error_classifier.rs  events.rs  flops.rs  keys.rs  logging.rs  main.rs  node_config.rs  node_id_manager.rs  orchestrator_client.rs  pretty.rs  prover.rs  prover_runtime.rs  register.rs  runtime.rs  setup.rs  system.rs  task.rs  task_cache.rs  version_checker.rs  version_requirements.rs
clients/cli/src/network/: client.rs  error_handler.rs  mod.rs  request_timer.rs
clients/cli/src/orchestrator/: client.rs  error.rs  mod.rs
clients/cli/src/proto/: nexus.orchestrator.rs
clients/cli/src/prover/: engine.rs  handlers.rs  input.rs  mod.rs  pipeline.rs  types.rs  verifier.rs
clients/cli/src/session/: headless_mode.rs  messages.rs  mod.rs  setup.rs  tui_mode.rs
clients/cli/src/ui/: app.rs  dashboard.rs  login.rs  metrics.rs  mod.rs  splash.rs
clients/cli/src/ui/dashboard/: mod.rs  renderer.rs  state.rs  updaters.rs  utils.rs
clients/cli/src/ui/dashboard/components/: footer.rs  header.rs  info_panel.rs  logs.rs  metrics.rs  mod.rs
clients/cli/src/utils/: banner.rs  cli_branding.rs  mod.rs  system_stats.rs  updater.rs
clients/cli/src/version/: checker.rs  manager.rs  mod.rs  requirements.rs
clients/cli/src/workers/: authenticated_worker.rs  core.rs  fetcher.rs  mod.rs  offline.rs  online.rs  prover.rs  submitter.rs
clients/cli/tests/: cli.rs
functions/: .gitignore  README.md  deploy.sh  package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
programs/fib_input_initial/: Cargo.toml  README.md
programs/fib_input_initial/src/: Cargo.toml  main.rs
proto/: orchestrator.proto
public/: install.sh  install.sh.template  version.json
tests/: integration_test.sh  test_updater.sh
