[package]
name = "nexus-network"
version = "0.7.9"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[features]
build_proto = []

[[bin]]
name = "nexus-network"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
strip = true
codegen-units = 1

[profile.ci-build]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.8"
home = "0.5.9"
iana-time-zone = "0.1.60"
log = "0.4.26"
md5 = "0.7.0"
#nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.3" }
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", branch = "mfaulk/conditionally-compile-profiler" }
postcard = "1.0.10"
prost = "0.13"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
sha3 = "0.10.8"
sysinfo = "0.33.1"
thiserror = "2.0.12"
tokio = { version = "1.38", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"

[build-dependencies]
prost-build = "0.13"
